# forseti

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  WORKFLOW.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  commitlint.yml  release.yml
03/fd991a75bb/: metadata.json
03/fd991a75bb/0/: metadata.json  prompt.txt
0e/bbdbeae13b/: metadata.json
0e/bbdbeae13b/0/: metadata.json  prompt.txt
0f/fda06a9b22/: metadata.json
0f/fda06a9b22/0/: metadata.json  prompt.txt
11/e29cec035c/: metadata.json
11/e29cec035c/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
14/d2cedbc1b7/: metadata.json
14/d2cedbc1b7/0/: metadata.json  prompt.txt  transcript.jsonl
2c/07f73d7061/: metadata.json
2c/07f73d7061/0/: metadata.json  prompt.txt  (+1 more)
40/8ae0acb0a4/: metadata.json
49/6d91185f98/: metadata.json
4e/fce8a2067e/: metadata.json
55/b927a30aff/: metadata.json
58/d9ec5fc0ca/: metadata.json
7d/0e926e206c/: metadata.json
85/0be495c779/: metadata.json
adapters/: README.md  prompt-tools-fallback.md
adapters/claude-code/: README.md
adapters/codex/: AGENTS.md  README.md  config.toml.example  notify.py  verify_hook.py
adapters/opencode/: README.md  forseti-verify.agent.md  forseti.command.md  opencode.json.example
c5/f17a2531b6/: metadata.json
cd/1b9b78744f/: metadata.json
d2/72e67a5847/: metadata.json
docs/: roadmap.md
docs/adr/: 0001-codename-forseti.md  0002-scope-and-success-metric.md  0003-language-priority.md  0004-esbmc-fork-strategy.md  0005-hybrid-tracking.md  0006-sequencing-gepa-before-real-code.md  0007-lean-off-critical-path.md  0008-vow-out-of-scope.md  0009-ci-esbmc-binary-provenance.md  README.md
docs/design/: 0001-harness-portability.md  0002-eliciting-natural-bugs.md  0003-memory-preconditions.md
docs/walkthroughs/: 0001-manual-loop-abs.md  0002-hook-enforced-safety.md
examples/: README.md  abs.c  abs_fixed.c  merge_sort.c  merge_sort_bug.c  murmurhash.c  murmurhash_bug.c  ring_buffer.c  ring_buffer_bug.c  sha1.c  sha1_bug.c  utf8_decode.c  utf8_decode_bug.c
f6/71a38e362d/: metadata.json
fb/1169f59f72/: metadata.json
src/: README.md
src/forseti/: __init__.py
tests/core/: test_core_cli.py  test_core_mcp_server.py  test_core_verify.py  test_propose.py
tests/esbmc/: test_build_argv.py  test_cex_parser.py  test_cex_parser_properties.py  test_classify.py  test_corpus.py  test_esbmc_cli.py  test_precond_corpus.py  test_render.py  test_result_to_dict.py  test_units.py  test_verify.py  test_verify_cli.py  test_verify_integration.py
tests/orchestrator/: test_check.py  test_check_integration.py  test_corpus_loop.py  test_emitter.py  test_fix.py  test_ladder.py  test_loop.py  test_loop_escalation.py  test_loop_integration.py  test_persistence.py  test_report.py  test_state.py  test_state_properties.py  test_telemetry.py  test_transcript.py
tests/precond/: test_precond_verify.py  test_synth.py
tests/properties/: test_cexpr.py  test_harness.py  test_harness_integration.py  test_llm_client.py  test_model.py  test_prompts.py  test_proposer.py  test_proposer_live.py  test_store.py
(+95 files in other folders)
