[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forseti"
version = "0.0.0"
description = "ESBMC-in-the-loop: write -> verify -> counterexample -> fix"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# The MCP server (forseti.core.mcp_server) needs the MCP SDK; kept optional so
# the base install and the loop/esbmc path stay dependency-free. Pinned to a
# FastMCP-supporting range: mcp==1.0.0 predates mcp.server.fastmcp, so a loose
# >=1.0 could install an SDK where `from mcp.server.fastmcp import FastMCP` fails.
mcp = ["mcp>=1.28.1,<2"]
# dev pulls in the mcp extra so CI type-checks and tests the server too.
dev = ["pytest>=8", "mypy>=2.1.0", "forseti[mcp]"]

[project.scripts]
forseti = "forseti.core.cli:main"
forseti-esbmc = "forseti.esbmc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
